--- a/ReceiptMWeb.html
+++ b/ReceiptMWeb.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
@@ -33,16 +32,6 @@
         max-width: 760px;
         margin: auto;
         background: #ffffff;
-        box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
-        padding: 22px;
-        position: relative;
-        overflow: hidden;
-      }
-      /* RECEIPT WRAPPER */
-      .invoice {
-        max-width: 760px;
-        margin: auto;
-        background: #f4f6f8;
         box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
         padding: 22px;
         position: relative;
@@ -197,10 +186,22 @@
         font-size: 14px;
         text-align: left;
       }
+      /* SUMMARY TEXT */
+      .summary-text {
+        margin-top: 12px;
+        font-size: 14px;
+        font-weight: 700;
+        text-align: center;
+        color: #000;
+      }
+      .green-amount {
+        color: #16a34a;
+        font-weight: 900;
+      }
       /* FOOTER */
       .footer {
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
         margin-top: 14px;
       }
@@ -304,7 +305,7 @@
           </div>
           <div class="bar-row">
             <div class="bar left"></div>
-            <div class="bar-text">VALUE BACK INVOICE</div>
+            <div class="bar-text">INVOICE</div>
             <div class="bar right"></div>
           </div>
           <div class="info">
@@ -321,8 +322,8 @@
             <thead>
               <tr>
                 <th style="width: 6%">SL</th>
-                <th>Item Description</th>
-                <th class="amount">Payable Amount</th>
+                <th>Item</th>
+                <th class="amount">Amount</th>
                 <th class="amount">Vouchers</th>
               </tr>
             </thead>
@@ -341,7 +342,7 @@
               </tr>
               <tr>
                 <td>3</td>
-                <td>Couple Movie Tickets Voucher</td>
+                <td>Couple Movie Tickets</td>
                 <td>—</td>
                 <td class="amount">₹750</td>
               </tr>
@@ -363,123 +364,118 @@
                 <td class="amount">₹2700</td>
                 <td class="amount">₹2700</td>
               </tr>
-              <tr class="total-get">
+              <!-- <tr class="total-get">
                 <td colspan="2">Pay ₹2700 Get & ₹2700 Vouchers Back</td>
-                <td style="text-align: end">₹0</td>
+                <td class="amount">₹0</td>
                 <td class="amount"></td>
-              </tr>
+                </tr> -->
             </tbody>
           </table>
+          <div class="summary-text">Pay ₹2700 & Get ₹2700 <br /></div>
           <div class="footer">
-            <div class="footer-text">
-              <strong>No bidding. No tricks. 100% value back.</strong>
-              <div class="tc">T&C Apply</div>
-            </div>
             <a
               href="https://www.business-standard.com/subscription-cart/product-offer"
               target="_blank"
               class="cta-link"
               onclick="handleSubscribeClick(event)"
             >
-              <div class="cta">Subscribe Now</div>
+              <div class="cta" onclick="closePopup()">Subscribe Now</div>
             </a>
           </div>
         </div>
       </div>
-      <script>
-        function handleSubscribeClick(event) {
-          // Allow the link to open first, then close popup after a short delay
-          setTimeout(() => {
-            closePopup();
-          }, 100);
+    </div>
+    <script>
+      function handleSubscribeClick(event) {
+        setTimeout(() => {
+          closePopup();
+        }, 100);
+      }
+
+      function closePopup() {
+        try {
+          var overlay =
+            window.parent.document.getElementById("intentOpacityDiv");
+          var wrapper = window.parent.document.getElementById("intentPreview");
+          if (overlay) overlay.remove();
+          if (wrapper) wrapper.remove();
+        } catch (error) {
+          console.error("Error removing parent elements:", error);
         }
 
-        function closePopup() {
-          try {
-            var overlay =
-              window.parent.document.getElementById("intentOpacityDiv");
-            var wrapper =
-              window.parent.document.getElementById("intentPreview");
-            if (overlay) overlay.remove();
-            if (wrapper) wrapper.remove();
-          } catch (error) {
-            console.error("Error removing parent elements:", error);
+        document.querySelector(".roll-wrapper").style.display = "none";
+      }
+
+      /* DATE */
+      const d = new Date();
+      document.getElementById("currentDate").textContent =
+        `${String(d.getDate()).padStart(2, "0")} / ${String(d.getMonth() + 1).padStart(2, "0")} / ${d.getFullYear()}`;
+
+      /* PREMIUM CONFETTI */
+      const canvas = document.getElementById("confetti");
+      const ctx = canvas.getContext("2d");
+      canvas.width = innerWidth;
+      canvas.height = innerHeight;
+
+      const colors = ["#B01116", "#E6B800", "#FFFFFF"];
+      let particles = [];
+
+      function createConfetti() {
+        particles = [];
+        for (let i = 0; i < 140; i++) {
+          particles.push({
+            x: Math.random() * canvas.width,
+            y: Math.random() * -canvas.height,
+            vx: (Math.random() - 0.5) * 1.5,
+            vy: Math.random() * 2 + 1.5,
+            size: Math.random() * 8 + 6,
+            rot: Math.random() * 360,
+            vr: (Math.random() - 0.5) * 1.2,
+            sway: Math.random() * 0.6,
+            color: colors[Math.floor(Math.random() * colors.length)],
+            shape: Math.random() > 0.65 ? "circle" : "rect",
+            life: Math.random() * 300 + 240,
+          });
+        }
+        animate();
+      }
+
+      function animate() {
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        particles.forEach((p) => {
+          p.x += Math.sin(p.y * 0.02) * p.sway + p.vx;
+          p.y += p.vy;
+          p.rot += p.vr;
+          p.life--;
+
+          ctx.save();
+          ctx.translate(p.x, p.y);
+          ctx.rotate((p.rot * Math.PI) / 180);
+          ctx.globalAlpha = Math.min(p.life / 80, 1);
+          ctx.fillStyle = p.color;
+
+          if (p.shape === "rect") {
+            ctx.fillRect(-p.size / 2, -p.size / 6, p.size, p.size / 3);
+          } else {
+            ctx.beginPath();
+            ctx.arc(0, 0, p.size / 3, 0, Math.PI * 2);
+            ctx.fill();
           }
+          ctx.restore();
+        });
 
-          document.querySelector(".roll-wrapper").style.display = "none";
-        }
+        particles = particles.filter(
+          (p) => p.life > 0 && p.y < canvas.height + 40,
+        );
+        if (particles.length) requestAnimationFrame(animate);
+      }
 
-        /* DATE */
-        const d = new Date();
-        document.getElementById("currentDate").textContent =
-          `${String(d.getDate()).padStart(2, "0")} / ${String(d.getMonth() + 1).padStart(2, "0")} / ${d.getFullYear()}`;
+      setTimeout(createConfetti, 1300);
 
-        /* PREMIUM CONFETTI */
-        const canvas = document.getElementById("confetti");
-        const ctx = canvas.getContext("2d");
+      window.addEventListener("resize", () => {
         canvas.width = innerWidth;
         canvas.height = innerHeight;
-
-        const colors = ["#B01116", "#E6B800", "#FFFFFF"];
-        let particles = [];
-
-        function createConfetti() {
-          particles = [];
-          for (let i = 0; i < 140; i++) {
-            particles.push({
-              x: Math.random() * canvas.width,
-              y: Math.random() * -canvas.height,
-              vx: (Math.random() - 0.5) * 1.5,
-              vy: Math.random() * 2 + 1.5,
-              size: Math.random() * 8 + 6,
-              rot: Math.random() * 360,
-              vr: (Math.random() - 0.5) * 1.2,
-              sway: Math.random() * 0.6,
-              color: colors[Math.floor(Math.random() * colors.length)],
-              shape: Math.random() > 0.65 ? "circle" : "rect",
-              life: Math.random() * 300 + 240,
-            });
-          }
-          animate();
-        }
-
-        function animate() {
-          ctx.clearRect(0, 0, canvas.width, canvas.height);
-          particles.forEach((p) => {
-            p.x += Math.sin(p.y * 0.02) * p.sway + p.vx;
-            p.y += p.vy;
-            p.rot += p.vr;
-            p.life--;
-
-            ctx.save();
-            ctx.translate(p.x, p.y);
-            ctx.rotate((p.rot * Math.PI) / 180);
-            ctx.globalAlpha = Math.min(p.life / 80, 1);
-            ctx.fillStyle = p.color;
-
-            if (p.shape === "rect") {
-              ctx.fillRect(-p.size / 2, -p.size / 6, p.size, p.size / 3);
-            } else {
-              ctx.beginPath();
-              ctx.arc(0, 0, p.size / 3, 0, Math.PI * 2);
-              ctx.fill();
-            }
-            ctx.restore();
-          });
-
-          particles = particles.filter(
-            (p) => p.life > 0 && p.y < canvas.height + 40,
-          );
-          if (particles.length) requestAnimationFrame(animate);
-        }
-
-        setTimeout(createConfetti, 1300);
-
-        window.addEventListener("resize", () => {
-          canvas.width = innerWidth;
-          canvas.height = innerHeight;
-        });
-      </script>
-    </div>
+      });
+    </script>
   </body>
 </html>
