--- a/BS/ArticleGrid.html
+++ b/BS/ArticleGrid.html
@@ -33,7 +33,7 @@
         padding: 15px;
         border-radius: 6px;
         position: relative;
-        text-align: left !important; /* Override CleverTap center alignment */
+        text-align: left !important;
       }
 
       /* HEADER */
